--- a/scripts/scratch.ipynb
+++ b/scripts/scratch.ipynb
@@ -20,13 +20,13 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "fc = '../args/gsm_qwen_1.5b.yaml'\n",
-    "with open(fc) as f2:\n",
-    "    config_dict = yaml.safe_load(f2)\n",
-    "configs = Config(config_dict)\n",
-    "\n",
-    "# model = AutoModelForCausalLM.from_pretrained(configs.model_id)"
+    "## Load"
    ]
   },
   {
@@ -47,8 +47,15 @@
     "configs = Config(config_dict)\n",
     "\n",
     "model = CoconutQwen2ForCausalLM.from_pretrained(f)\n",
-    "tokenenizer = AutoTokenizer.from_pretrained(f)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(f)\n",
     "# model.load_state_dict(safe_open(f1, 'pt'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Eval"
    ]
   },
   {
@@ -99,7 +106,52 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "from coconut.dataset import (\n",
+    "    CoconutCollator,\n",
+    "    get_cot_latent_dataset,\n",
+    "    get_dataset,\n",
+    "    get_question_only_latent_dataset,\n",
+    ")\n",
+    "from coconut.eval import evaluate\n",
+    "\n",
+    "bot_id = tokenizer.convert_tokens_to_ids(\"<|start-latent|>\")\n",
+    "eot_id = tokenizer.convert_tokens_to_ids(\"<|end-latent|>\")\n",
+    "scheduled_stage = 3\n",
+    "latent_id = tokenizer.convert_tokens_to_ids(\"<|latent|>\")\n",
+    "\n",
+    "max_size = 1024\n",
+    "base_dataset_valid = get_dataset(\n",
+    "    configs.val_path, tokenizer, max_size=max_size//30+3, drop_unused=False\n",
+    ")\n",
+    "\n",
+    "dataset_gen_val = get_question_only_latent_dataset(\n",
+    "    scheduled_stage,\n",
+    "    base_dataset_valid,\n",
+    "    configs,\n",
+    "    bot_id,\n",
+    "    latent_id,\n",
+    "    eot_id,\n",
+    "    no_bot_eot=False,\n",
+    "    # drop_unused=False,\n",
+    ")\n",
+    "collator = CoconutCollator(tokenizer, latent_id=latent_id, label_pad_token_id=-100)\n",
+    "valid_gen_dataloader = torch.utils.data.DataLoader(\n",
+    "    dataset_gen_val,\n",
+    "    num_workers=1,\n",
+    "    pin_memory=True,\n",
+    "    batch_size=1,\n",
+    "    collate_fn=collator,\n",
+    ")\n",
+    "\n",
+    "# run eval\n",
+    "max_new_tokens = 64\n",
+    "device = \"cuda\"\n",
+    "dtype = torch.bfloat16\n",
+    "phase = -1\n",
+    "\n",
+    "r = evaluate(valid_gen_dataloader, model, tokenizer, base_dataset_valid, max_new_tokens=max_new_tokens, name=f\"eval_{phase}\", dtype=dtype, device=device)"
+   ]
   },
   {
    "cell_type": "code",
