--- a/scripts/scratch.ipynb
+++ b/scripts/scratch.ipynb
@@ -16,13 +16,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,13 +33,14 @@
     "    CoconutQwen2ForCausalLM,\n",
     ")\n",
     "\n",
-    "f = \"../outputs/gsm-qwen-1.5b_20250130-193831/checkpoint_1\"\n",
-    "f2 = f + '/config.yaml'\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "f = \"../outputs/gsm-qwen_20250201-122443/checkpoint_3\"\n",
+    "fc = f + '/config.yaml'\n",
     "with open(fc) as f2:\n",
     "    config_dict = yaml.safe_load(f2)\n",
     "configs = Config(config_dict)\n",
     "\n",
-    "model = CoconutQwen2ForCausalLM.from_pretrained(f)\n",
+    "model = CoconutQwen2ForCausalLM.from_pretrained(f, device_map=device)\n",
     "tokenizer = AutoTokenizer.from_pretrained(f)\n",
     "# model.load_state_dict(safe_open(f1, 'pt'))"
    ]
@@ -60,50 +54,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "10fe3d5c9af446b0a140c165a417bda5",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "Qwen2Config {\n",
-       "  \"_attn_implementation_autoset\": true,\n",
-       "  \"_name_or_path\": \"../outputs/gsm-qwen-1.5b_20250130-193831/checkpoint_1\",\n",
-       "  \"architectures\": [\n",
-       "    \"CoconutQwen2ForCausalLM\"\n",
-       "  ],\n",
-       "  \"attention_dropout\": 0.0,\n",
-       "  \"bos_token_id\": 151643,\n",
-       "  \"eos_token_id\": 151643,\n",
-       "  \"hidden_act\": \"silu\",\n",
-       "  \"hidden_size\": 1536,\n",
-       "  \"initializer_range\": 0.02,\n",
-       "  \"intermediate_size\": 8960,\n",
-       "  \"latent_token_id\": 151667,\n",
-       "  \"max_position_embeddings\": 4096,\n",
-       "  \"max_window_layers\": 21,\n",
-       "  \"model_type\": \"qwen2\",\n",
-       "  \"num_attention_heads\": 12,\n",
-       "  \"num_hidden_layers\": 28,\n",
-       "  \"num_key_value_heads\": 2,\n",
-       "  \"replacement_method\": \"0.5\",\n",
-       "  \"rms_norm_eps\": 1e-06,\n",
-       "  \"rope_scaling\": null,\n",
-       "  \"rope_theta\": 10000,\n",
-       "  \"sliding_window\": null,\n",
-       "  \"tie_word_embeddings\": true,\n",
-       "  \"torch_dtype\": \"bfloat16\",\n",
-       "  \"transformers_version\": \"4.46.2\",\n",
-       "  \"use_cache\": true,\n",
-       "  \"use_mrope\": false,\n",
-       "  \"use_sliding_window\": false,\n",
-       "  \"vocab_size\": 151668\n",
-       "}"
+       "../data/gsm_valid.json (num_proc=32):   0%|          | 0/37 [00:00<?, ? examples/s]"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3e988ffd275745099a9fd33e252825c8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "q_latent_3 (num_proc=32):   0%|          | 0/37 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "587c87fcd81c42e798ef3d6a864c1ca6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Test Accuracy eval_-1:   0%|          | 0/37 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-02-01 14:21:41.550\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcoconut.eval\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m24\u001b[0m - \u001b[1mStarting evaluation eval_-1\u001b[0m\n",
+      "\u001b[32m2025-02-01 14:21:43.164\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcoconut.eval\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m67\u001b[0m - \u001b[1mQ #0: Answer = '300' ideal_CoT = '<<4-2=2>>\n",
+      "\t<<2/.5=4>>\n",
+      "\t<<12/4=3>>\n",
+      "\t<<100*3=300>>,'.\n",
+      "Question: `John cuts his grass to 2 inches.  It grows .5 inches per month.  When it gets to 4 inches he cuts it back down to 2 inches.  It cost $100 to get his grass cut.  How much does he pay per year?`.\n",
+      "Extracted llm Output: `1600` (=? 300) ❌.\n",
+      "Full llm output: `John cuts his grass to 2 inches.  It grows .5 inches per month.  When it gets to 4 inches he cuts it back down to 2 inches.  It cost $100 to get his grass cut.  How much does he pay per year?\n",
+      "\t<|start-latent|><|latent|><|latent|><|latent|><|latent|><|latent|><|latent|><|end-latent|><<16*100=1600>>\n",
+      "\t### 1600`. \n",
+      "\u001b[0m\n",
+      "\u001b[32m2025-02-01 14:21:43.402\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcoconut.eval\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m67\u001b[0m - \u001b[1mQ #1: Answer = '10' ideal_CoT = '<<1.5*2=3>>\n",
+      "\t<<3+2.5=5.5>>\n",
+      "\t<<1.5+3+5.5=10>>,'.\n",
+      "Question: `Hannah has three dogs. The first dog eats 1.5 cups of dog food a day. The second dog eats twice as much while the third dog eats 2.5 cups more than the second dog. How many cups of dog food should Hannah prepare in a day for her three dogs?`.\n",
+      "Extracted llm Output: `10.5` (=? 10) ❌.\n",
+      "Full llm output: `Hannah has three dogs. The first dog eats 1.5 cups of dog food a day. The second dog eats twice as much while the third dog eats 2.5 cups more than the second dog. How many cups of dog food should Hannah prepare in a day for her three dogs?\n",
+      "\t<|start-latent|><|latent|><|latent|><|latent|><|latent|><|latent|><|latent|><|end-latent|>### 10.5`. \n",
+      "\u001b[0m\n",
+      "\u001b[32m2025-02-01 14:21:43.616\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcoconut.eval\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m67\u001b[0m - \u001b[1mQ #2: Answer = '1400' ideal_CoT = '<<30/100*2000=600>>\n",
+      "\t<<2000-600=1400>>,'.\n",
+      "Question: `Travis wants to fly to Australia. The regular tickets cost about $2000. As Travis is a student, he will get a 30% discount on this price. How much does he need to pay for his ticket?`.\n",
+      "Extracted llm Output: `1400` (=? 1400) ✅.\n",
+      "Full llm output: `Travis wants to fly to Australia. The regular tickets cost about $2000. As Travis is a student, he will get a 30% discount on this price. How much does he need to pay for his ticket?\n",
+      "\t<|start-latent|><|latent|><|latent|><|latent|><|latent|><|latent|><|latent|><|end-latent|>### 1400`. \n",
+      "\u001b[0m\n",
+      "\u001b[32m2025-02-01 14:21:54.120\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcoconut.eval\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m82\u001b[0m - \u001b[1mCorrect=2, CoT_correct=0, Total=37. eval_-1\u001b[0m\n",
+      "\u001b[32m2025-02-01 14:21:54.120\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcoconut.eval\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m83\u001b[0m - \u001b[1mAccuracy on validation set:  2 / 37 = 0.05405405405405406\u001b[0m\n",
+      "\u001b[32m2025-02-01 14:21:54.121\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcoconut.eval\u001b[0m:\u001b[36mevaluate\u001b[0m:\u001b[36m84\u001b[0m - \u001b[1mCoT match on validation set: 0 / 37 = 0.0\u001b[0m\n"
+     ]
     }
    ],
    "source": [
@@ -122,7 +151,7 @@
     "\n",
     "max_size = 1024\n",
     "base_dataset_valid = get_dataset(\n",
-    "    configs.val_path, tokenizer, max_size=max_size//30+3, drop_unused=False\n",
+    "    '../' + configs.val_path, tokenizer, max_size=max_size//30+3, drop_unused=False\n",
     ")\n",
     "\n",
     "dataset_gen_val = get_question_only_latent_dataset(\n",
