--- a/scripts/scratch.ipynb
+++ b/scripts/scratch.ipynb
@@ -262,6 +262,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## eval fn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def exract_first_number1(text):\n",
+    "    return text.split(\"#\")[-1].replace(\",\", \"\").strip()\n",
+    "\n",
+    "def extract_first_number2(text):\n",
+    "    # updated regex to capture the first number after '###'\n",
+    "    match = re.search(r'###\\s*(\\d+\\.?\\d*)', text)\n",
+    "    if match:\n",
+    "        return match.group(1)\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "test_cases = [\n",
+    "    \"### 0.0\", 0.0,\n",
+    "    \"### 0.0, 0.0\", 0.0,\n",
+    "    \"### 0.0 ### 0.0\", 0.0,\n",
+    "    \"### 1110.0### 0.0 0.033\", 1110.0,\n",
+    "    '699 3 ##  45 ###34 ### 35#', 34.0,\n",
+    "    '### 15### 16###', 15.0,\n",
+    "    '### 40### 41### 42### 43', 40.0,\n",
+    "]\n",
+    "\n",
+    "for i in range(0, len(test_cases), 2):\n",
+    "    print(extract_first_number2(test_cases[i]), test_cases[i+1])\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
